--- a/metrics-demo/metrics-demo-svc.yaml
+++ b/metrics-demo/metrics-demo-svc.yaml
@@ -1,19 +1,17 @@
-apiVersion: extensions/v1beta1
-kind: Ingress
+---
+apiVersion: v1
+kind: Service
 metadata:
-  annotations:
-    kubernetes.io/ingress.class: traefik
-    traefik.frontend.rule.type: PathPrefixStrip
-  creationTimestamp: null
-  name: metrics-demo
+  name: metrics-demo-lb
   namespace: dev
 spec:
-  rules:
-  - http:
-      paths:
-      - backend:
-          serviceName: metrics-demo
-          servicePort: 3000
-        path: /metrics-demo
-status:
-  loadBalancer: {}
+  type: LoadBalancer
+  ports:
+    - port: 80
+      targetPort: 3000
+      protocol: TCP
+      name: http
+  selector:
+    app: metrics-demo
+
+
