--- a/metrics-demo/metrics-demo-svc.yaml
+++ b/metrics-demo/metrics-demo-svc.yaml
@@ -2,16 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: metrics-demo-lb
+  name: metrics-demo
   namespace: dev
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - port: 80
+    - port: 3000
       targetPort: 3000
       protocol: TCP
       name: http
   selector:
     app: metrics-demo
-
 
