--- a/deploy/metrics-demo-ingress.yaml
+++ b/deploy/metrics-demo-ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: traefik
+    traefik.frontend.rule.type: PathPrefix
   creationTimestamp: null
   name: metrics-demo
   namespace: dev
